# junto-control

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
scripts/: dev_run_no_mcp.py  smoke_broker.py  smoke_mcp.py  smoke_subscribe.py
src/claudecontrol/: auth.py  config.py  destructive.py  inbox.py  main.py  mcp_client.py  web.py
src/claudecontrol/templates/: backlog.html  base.html  compose.html  inbox.html  login.html  projects.html  spec_view.html  specs.html
src/juntocontrol/: config.py  inbox.py  main.py  mcp_client.py  web.py
src/juntocontrol/templates/: _message.html  backlog.html  base.html  compose.html  inbox.html  login.html  projects.html  spec_view.html  specs.html
tests/: test_config.py  test_destructive.py  test_inbox.py  test_mcp_client.py  test_web.py
