[project]
name = "juntocontrol"
version = "0.1.0"
description = "Junto-control: web UI for messaging agents via the shared-memory MCP server"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Tom Lemmons" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp>=1.2",
    "httpx>=0.27",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "pydantic>=2.9",
    "python-multipart>=0.0.20",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juntocontrol"]

[tool.hatch.build.targets.wheel.force-include]
"src/juntocontrol/templates" = "juntocontrol/templates"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]  # asserts in tests are fine

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
